--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "eslint": "^9.20.1",
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
     "jsr": "^0.13.3",
-    "prettier": "3.5.1",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.0",
-    "vite": "^6.1.1",
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   },
   "dependencies": {
