--- a/.github/workflows/ghpages.yaml
+++ b/.github/workflows/ghpages.yaml
@@ -1,40 +1,22 @@
-# Initial version in this project taken from vite documentation on:
-# https://raw.githubusercontent.com/vitejs/vite/84e6d6044863e3e620addcf9065010b30a860e22/docs/guide/static-deploy.md
-#
-# These following license infos are derived from the LICENSE file in that repository.
-#
-# SPDX-License-Identifier: MIT
-# SPDX-FileCopyrightText: 2019-2025 VoidZero Inc. and Vite contributors
+# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: 2025 Jonas Tobias Hopusch <git@jotoho.de>
 
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deployment process for Github Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches:
+      - 'master'
+  pull_request:
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
+  build-page:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,12 +31,35 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Store build result
+        uses: actions/upload-artifact@v4
+        if: github.ref == 'refs/heads/master'
+        with:
+          name: 'next-pages-build'
+          path: './dist/'
+          if-no-files-found: "error"
+          overwrite: true
+          retention-days: 1
+  deploy-page:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    needs: build-page
+    permissions:
+      pages: write
+    concurrency:
+      group: "github pages deployment"
+      cancel-in-progress: true
+    steps:
+      - name: Retrieve build result
+        uses: actions/download-artifact@v4
+        with:
+          name: 'next-pages-build'
+          path: './dist/'
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
           path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
