--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,7 @@
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: 2025 Jonas Tobias Hopusch <git@jotoho.de>
 
-* @jotoho @TimBeckmann
+* @jotoho
+
+/*.html @jotoho @TimBeckmann
+src/* @jotoho @TimBeckmann
