--- a/.github/workflows/ghpages.yaml
+++ b/.github/workflows/ghpages.yaml
@@ -46,6 +46,7 @@ jobs:
     needs: build-page
     permissions:
       pages: write
+      id-token: write
     concurrency:
       group: "github pages deployment"
       cancel-in-progress: true
