chore: less frequent dependabot dependency updates
Now that development on this project has calmed, processing dependency
updates every day is overkill.
With these changes, I can deal with any updates in weekly batches.

Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     directory: "/"
   - package-ecosystem: "github-actions"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     directory: "/"
