--- a/functions/invite-to-team/requirements.txt
+++ b/functions/invite-to-team/requirements.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: 2025 Jonas Tobias Hopusch <git@jotoho.de>
 
-appwrite
+appwrite ~= 9.0.2
