chore: fix syntax of condition in thread-automation.yaml
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/.github/workflows/thread-automation.yaml
+++ b/.github/workflows/thread-automation.yaml
@@ -32,7 +32,7 @@ jobs:
   lockthreads:
     name: Scan and Lock closed threads
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == "schedule" }}
+    if: github.event_name == 'schedule'
     permissions:
       issues: write
       pull-requests: write
