--- a/.github/workflows/thread-automation.yaml
+++ b/.github/workflows/thread-automation.yaml
@@ -23,7 +23,7 @@ jobs:
       group: stale
       cancel-in-progress: true
     steps:
-      - uses: actions/stale@9.1.0
+      - uses: actions/stale@v9.1.0
         with:
           exempt-all-assignees: true
           exempt-all-milestones: true
