chore: bundle minor and patch dependencies for faster updating
This should reduce the time burden on me as maintainer when validating
and merging dependabot updates every week.

Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,3 +27,9 @@ updates:
       - "jotoho"
     reviewers:
       - "jotoho"
+
+groups:
+  compatible:
+    update-types:
+      - "patch"
+      - "minor"
